--- a/templates/base.html
+++ b/templates/base.html
@@ -1,40 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Confites Online{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>{% block title %}{% endblock %}</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="navbar-left">
-                <a href="{% url 'home' %}" class="navbar-brand">Confites Online</a>
-            </div>
-            <div class="navbar-right">
-                <a href="{% url 'login' %}" class="icon-button">
-                    <i class="fas fa-user"></i> Iniciar Sesión
-                </a>
-            </div>
-        </nav>
-        <div class="navbar-buttons">
-            <button><a href="{% url 'categoria' 'bebidas' %}">Bebidas</a></button>
-            <button><a href="{% url 'categoria' 'dulces' %}">Dulces</a></button>
-            <button><a href="{% url 'categoria' 'snacks' %}">Snacks</a></button>
-            <button><a href="{% url 'categoria' 'chocolates' %}">Chocolates</a></button>
-        </div>
-    </header>
-    
-    <main>
-        {% block content %}{% endblock %}
-    </main>
-    
-    <footer>
-        <p>&copy; 2024 Confites Online. Todos los derechos reservados.</p>
-    </footer>
+    {% block header %}{% endblock %}
+    {% block content %}{% endblock %}
+    {% block footer %}{% endblock %}
 </body>
 </html>
