--- a/templates/register.html
+++ b/templates/register.html
@@ -1,15 +1,55 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Registrarse - Confites Online{% endblock %}
 
+{% block header %}
+    <div class="container-fluid text-center py-4" style="background-color: #4A4063;">
+        <a href="{% url 'home' %}">
+            <img class="img-fluid d-block mx-auto" style="max-height: 5rem;" src="{% static '/images/Logo.png' %}" alt="Logo">
+        </a>
+    </div>
+{% endblock %}
+
 {% block content %}
-    <div class="register-container">
-        <h2>Registro de Usuario</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Registrarse</button>
-        </form>
-        <p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión aquí</a></p>
+    <div class="container d-flex align-items-center justify-content-center" style="height: 70vh;">
+        <div class="card p-4 shadow" style="max-width: 32rem;width: 100%;">
+            <form method="POST">
+                <h1 class="card-title text-center">Registro de Usuario</h1>
+                {% csrf_token %}
+                
+                <div class="form-group mt-3">
+                    <label for="username" class="form-label">Usuario</label>
+                    <div class="input-group">
+                        <input 
+                        type="text" 
+                        class="form-control" 
+                        id="username" 
+                        name="username" 
+                        placeholder="peralta.javier02" 
+                        aria-label="correo" 
+                        aria-describedby="basic-addon2"
+                        maxlength="254">
+                        <span class="input-group-text" id="basic-addon2">@nufra.com</span>
+                    </div>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" name="password" class="form-control" maxlength="128">
+                </div>
+                
+                <div class="form-group mt-2">
+                    <label for="confirm_password" class="form-label">Confirmar Contraseña</label>
+                    <input type="password" name="confirm_password" class="form-control" maxlength="128">
+                </div>
+                
+                <div>
+                    <button type="submit" class="btn btn-secondary w-100">Registrarse</button>
+                </div>
+            </form>
+
+            <p class="text-center mt-3">¿Ya tienes cuenta? <a href="{% url 'Login' %}">Inicia sesión aquí</a></p>
+        </div>
     </div>
 {% endblock %}
